--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,11 +1,19 @@
 .contact{
+    height: 100vh;
     margin-top: 150px;
+    // background-color: rgb(211, 211, 211);
     position: relative;
+
+    .contact-contain-left > *{
+        padding: 0.9rem 0;
+    }
 
     .contact-contain-left{
         position: absolute;
         background-color: $color-blue-brand;
         height: 500px;
+        top: 11.5%;
+        z-index: 1;
 
         h1{
             color: white;
@@ -41,6 +49,50 @@
     }
 
     .contact-contain-right{
-        display: none;
+        position: absolute;
+        background-color: white;
+        left: 13%;
+        padding-top: 60px;
+        padding-bottom: 70px;
+        margin-top: 25px;
+        height: 600px;
+        display: flex;
+        justify-content: start;
+
+        form{
+            padding-top: 50px;
+            margin-left: 250px;
+        }
+
+        label{
+            color: $color-blue-brand;
+            font-weight: bold;
+            font-size: 1.4rem;
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
+
+        input, textarea{
+            width: 150%;
+            display: block;
+            background-color: $color-yellow-brand;
+            border-radius: 5px;
+            padding: 8px 5px;
+            border: none;
+            margin-bottom: 10px;
+            outline: none;
+        }
+
+        textarea{
+            min-height: 100px;
+            max-height: 100px;
+        }
+
+        .btn-input{
+            background-color: $color-blue-brand;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
     }
 }
