--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,7 @@ $color-bg-hamburguer: #F0A500;
 
 body{
     font-family: 'Nunito', sans-serif;
+    background-color: rgb(228, 228, 228);
 }
 
 @import 'home';
