--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -93,6 +93,47 @@
             color: white;
             font-weight: bold;
             font-size: 1.2rem;
+            margin-top: 1.2rem;
+        }
+    }
+}
+
+@media (max-width: 768px){
+    .contact{
+        position: static;
+
+        .contact-contain-left > *{
+            padding: 0;
+        }
+
+        .contact-contain-left{
+            position: static;
+            height: auto;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            a{
+                display: block;
+                font-size: 0.8rem;
+
+                i{
+                    font-size: 2rem;
+                }
+            }
+        }
+
+        .contact-contain-right{
+            padding: 0;
+            margin-top: 0;
+            position: static;
+            
+            form{
+                margin-left: 0;
+                margin-top: 0;
+            }
         }
     }
 }
