--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 body {
   font-family: "Nunito", sans-serif;
   background-color: #e4e4e4;
+  overflow-x: hidden;
 }
 
 header {
@@ -76,19 +77,19 @@ main .contain-left .btn-social-media .twitter {
   background-color: #1DA1F2;
 }
 main .contain-left .btn-social-media .twitter:hover {
-  background-color: #33364D;
+  background-color: #000839;
 }
 main .contain-left .btn-social-media .github {
   background-color: #333333;
 }
 main .contain-left .btn-social-media .github:hover {
-  background-color: #33364D;
+  background-color: #000839;
 }
 main .contain-left .btn-social-media .linkedin {
   background-color: #0077B5;
 }
 main .contain-left .btn-social-media .linkedin:hover {
-  background-color: #33364D;
+  background-color: #000839;
 }
 main .user-contain {
   position: absolute;
@@ -245,6 +246,9 @@ main .contain-right {
   .about-main .about-image {
     margin-top: 0;
   }
+  .about-main h1 {
+    font-size: 2rem;
+  }
 }
 .skills {
   padding-top: 50px;
@@ -307,6 +311,12 @@ main .contain-right {
   text-align: left;
   color: #211E1E;
 }
+.skills .skills-tecnologies .skill-tecnolgies-container-description .figma {
+  width: 90px;
+}
+.skills .skills-tecnologies .skill-tecnolgies-container-description .html {
+  width: 100px;
+}
 
 @media (max-width: 768px) {
   .skills-tecnologies .skill-tecnolgies-container-description {
@@ -321,6 +331,10 @@ main .contain-right {
   }
   .skills-tecnologies .skill-tecnolgies-container-description img {
     width: 60px !important;
+  }
+
+  .skills .skills-title h1 {
+    font-size: 2rem;
   }
 }
 .project {
@@ -364,83 +378,47 @@ main .contain-right {
 }
 .project .bg-project1 {
   background-image: url("../assets/img/digital-agency.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  cursor: pointer;
-}
-.project .bg-project1:hover {
-  background: transparent;
-  animation: 10s ease-in-out;
-}
-.project .bg-project1:hover .active {
-  display: block !important;
 }
 .project .bg-project2 {
   background-image: url("../assets/img/barber-shop.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  cursor: pointer;
-}
-.project .bg-project2:hover {
-  background: transparent;
-  animation: 10s ease-in-out;
-}
-.project .bg-project2:hover .active {
-  display: block !important;
 }
 .project .bg-project3 {
   background-image: url("../assets/img/dashboard-ventas.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  cursor: pointer;
-}
-.project .bg-project3:hover {
-  background: transparent;
-  animation: 10s ease-in-out;
-}
-.project .bg-project3:hover .active {
-  display: block !important;
 }
 .project .bg-project4 {
   background-image: url("../assets/img/Bookmart-manager.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  cursor: pointer;
-}
-.project .bg-project4:hover {
-  background: transparent;
-  animation: 10s ease-in-out;
-}
-.project .bg-project4:hover .active {
-  display: block !important;
 }
 .project .bg-project5 {
   background-image: url("../assets/img/Edena-page.png");
+}
+.project .bg-project6 {
+  background-image: url("../assets/img/dashboard-ventas-2.png");
+}
+.project .bg-project1,
+.project .bg-project2,
+.project .bg-project3,
+.project .bg-project4,
+.project .bg-project5,
+.project .bg-project6 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   cursor: pointer;
 }
-.project .bg-project5:hover {
-  background: transparent;
-  transition: 3s;
-}
-.project .bg-project5:hover .active {
-  display: block !important;
-}
-.project .bg-project6 {
-  background-image: url("../assets/img/dashboard-ventas-2.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  cursor: pointer;
-}
+.project .bg-project1:hover,
+.project .bg-project2:hover,
+.project .bg-project3:hover,
+.project .bg-project4:hover,
+.project .bg-project5:hover,
 .project .bg-project6:hover {
   background: transparent;
   animation: 10s ease-in-out;
 }
+.project .bg-project1:hover .active,
+.project .bg-project2:hover .active,
+.project .bg-project3:hover .active,
+.project .bg-project4:hover .active,
+.project .bg-project5:hover .active,
 .project .bg-project6:hover .active {
   display: block !important;
 }
@@ -460,10 +438,14 @@ main .contain-right {
     margin: auto;
     margin-bottom: 10px;
   }
+  .project h1 {
+    font-size: 2rem !important;
+  }
 }
 .contact {
+  margin-left: 19%;
   height: 100vh;
-  margin-top: 150px;
+  margin-top: 100px;
   position: relative;
 }
 .contact .contact-contain-left > * {
@@ -485,7 +467,6 @@ main .contain-right {
   color: white;
   margin: 10px auto;
   font-size: 1rem;
-  align-items: center;
   align-self: center;
   justify-content: center;
 }
@@ -547,12 +528,10 @@ main .contain-right {
   margin-top: 1.2rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .contact {
+    margin-left: auto;
     position: static;
-  }
-  .contact .contact-contain-left > * {
-    padding: 0;
   }
   .contact .contact-contain-left {
     position: static;
@@ -561,11 +540,13 @@ main .contain-right {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
   }
   .contact .contact-contain-left a {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 0.8rem;
+    padding: 0 20px;
   }
   .contact .contact-contain-left a i {
     font-size: 2rem;
@@ -574,10 +555,56 @@ main .contain-right {
     padding: 0;
     margin-top: 0;
     position: static;
+    height: auto;
   }
   .contact .contact-contain-right form {
+    padding: 20px 40px 0 40px;
+    width: 100%;
     margin-left: 0;
     margin-top: 0;
+  }
+  .contact .contact-contain-right form input, .contact .contact-contain-right form textarea {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .contact .contact-contain-left > * {
+    padding: 0;
+  }
+  .contact .contact-contain-left > * :not(h1) {
+    display: none;
+  }
+  .contact .contact-contain-left h1 {
+    font-size: 2rem;
+  }
+  .contact .contact-contain-right form {
+    width: 100%;
+    padding: 20px;
+  }
+  .contact .contact-contain-right form input, .contact .contact-contain-right form textarea {
+    width: 100%;
+    color: rgba(0, 8, 57, 0.4);
+    font-weight: bold;
+  }
+}
+@media (max-width: 576px) {
+  .contact .contact-contain-left > * {
+    padding: 0;
+  }
+  .contact .contact-contain-left > * :not(h1) {
+    display: none;
+  }
+  .contact .contact-contain-left h1 {
+    font-size: 2rem;
+  }
+  .contact .contact-contain-right form {
+    width: 100%;
+    padding: 20px;
+  }
+  .contact .contact-contain-right form input, .contact .contact-contain-right form textarea {
+    width: 100%;
+    color: rgba(0, 8, 57, 0.4);
+    font-weight: bold;
   }
 }
 
