--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,7 @@ body{
     font-family: 'Nunito', sans-serif;
     background-color: rgb(228, 228, 228);
     overflow-x: hidden;
+    // scroll-behavior: smooth;
 }
 
 @import 'variables';
